fix note-list overflow

--- a/src/styles/_note-sidebar.scss
+++ b/src/styles/_note-sidebar.scss
@@ -1,6 +1,12 @@
 .note-sidebar {
   background: $note-sidebar-color;
   border-right: 1px solid darken($note-sidebar-color, 10%);
+  overflow-y: hidden;
+  height: 100vh;
+
+  &:hover {
+    overflow-y: auto;
+  }
 
   &-header {
     padding: 0.5rem;
